syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_update_user.proto";
import "rpc_verify_email.proto";
import "rpc_create_account.proto";
import "rpc_get_account.proto";
import "rpc_list_accounts.proto";
import "rpc_deposit.proto";
import "rpc_withdraw.proto";
import "rpc_transfer_money.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/JaidenShall/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Simple Bank API";
		version: "1.2";
		contact: {
			name: "Jaiden Shall";
			url: "https://github.com/JaidenShall";
			email: "shalljaiden0110@gmail.com";
		};
	};
};

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Use this API to create a new user";
			summary: "Create new user";
        };
        
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Use this API to login user and get access token & refresh token";
			summary: "Login user";
        };
    }

    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            patch: "/v1/update_user"
            body: "*"
        };
		option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			description: "Use this API to update user";
			summary: "Update user";
        };
    }

    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            get: "/v1/verify_email"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to verify user's email address";
            summary: "Verify email";
        };
    }

    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/v1/accounts"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new account";
            summary: "Create account";
        };
    }

    rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
        option (google.api.http) = {
            get: "/v1/accounts/{id}"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get account by ID";
            summary: "Get account";
        };
    }

    rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse) {
        option (google.api.http) = {
            get: "/v1/accounts"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to list accounts";
            summary: "List accounts";
        };
    }

    rpc Deposit (DepositRequest) returns (DepositResponse) {
        option (google.api.http) = {
            post: "/v1/accounts/{account_id}/deposit"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to deposit money to an account";
            summary: "Deposit money";
        };
    }
    
    rpc Withdraw (WithdrawRequest) returns (WithdrawResponse) {
        option (google.api.http) = {
            post: "/v1/accounts/{account_id}/withdraw"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to withdraw money from an account";
            summary: "Withdraw money";
        };
    } 
    
    rpc TransferMoney (TransferMoneyRequest) returns (TransferMoneyResponse) {
        option (google.api.http) = {
            post: "/v1/transfers"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to transfer money between accounts";
            summary: "Transfer money";
        };
    }


}

